Add Main Nav Section
Created main nav section with links and logo

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <header role="banner">
-      <nav class="navbar1" role="navigation">
-        <div class="navdiv1">
+      <nav class="nav-bar-top" role="navigation">
+        <div class="nav-div-top">
           <div class="logo"><a href="#">www.DEMOLINK.ORG |</a></div>
 
           <ul>
@@ -19,6 +19,21 @@
             <li><a href="#">HELP |</a></li>
           </ul>
         </div>
+      </nav>
+
+      <nav class="nav-bar-main" role="navigation">
+        <div class="nav-div-main></div>
+        <div class="logo">
+          <a href="#"><img src="./images/detroix_logo.png" alt="" /></a>
+        </div>
+
+        <ul>
+          <li><a href="#">HOME</a></li>
+          <li><a href="#">ABOUT</a></li>
+          <li><a href="#">SERVICES</a></li>
+          <li><a href="#">FAQS</a></li>
+          <li><a href="#">CONTACT</a></li>
+        </ul>
       </nav>
     </header>
   </body>
