Style Main Nav Bar
Add styling to main nav bar

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header role="banner">
       <nav class="nav-bar-top" role="navigation">
         <div class="nav-div-top">
-          <div class="logo"><a href="#">www.DEMOLINK.ORG |</a></div>
+          <div class="logo-top"><a href="#">www.DEMOLINK.ORG |</a></div>
 
           <ul>
             <li><a href="#">SUPPORT |</a></li>
@@ -22,18 +22,21 @@
       </nav>
 
       <nav class="nav-bar-main" role="navigation">
-        <div class="nav-div-main></div>
-        <div class="logo">
-          <a href="#"><img src="./images/detroix_logo.png" alt="" /></a>
-        </div>
+        <div class="nav-div-main">
+          <div class="logo-main">
+            <a href="#"
+              ><img src="./images/detroix_logo.png" alt="Detroix Logo"
+            /></a>
+          </div>
 
-        <ul>
-          <li><a href="#">HOME</a></li>
-          <li><a href="#">ABOUT</a></li>
-          <li><a href="#">SERVICES</a></li>
-          <li><a href="#">FAQS</a></li>
-          <li><a href="#">CONTACT</a></li>
-        </ul>
+          <ul>
+            <li><a href="#">HOME</a></li>
+            <li><a href="#">ABOUT</a></li>
+            <li><a href="#">SERVICES</a></li>
+            <li><a href="#">FAQS</a></li>
+            <li><a href="#">CONTACT</a></li>
+          </ul>
+        </div>
       </nav>
     </header>
   </body>
