Style buttons on main nav bar
Added color and sizing to buttons on main nav bar

--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
           </div>
 
           <ul>
-            <li><a href="#">HOME</a></li>
-            <li><a href="#">ABOUT</a></li>
-            <li><a href="#">SERVICES</a></li>
-            <li><a href="#">FAQS</a></li>
-            <li><a href="#">CONTACT</a></li>
+            <li><button type="button">HOME</button></li>
+            <li><button type="button">ABOUT</button></li>
+            <li><button type="button">SERVICES</button></li>
+            <li><button type="button">FAQS</button></li>
+            <li><button type="button">CONTACTS</button></li>
           </ul>
         </div>
       </nav>
