Add Main Image and Circles
Added main image with 3 gray circles below it

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <header role="banner">
+      <!--Small Nav Bar at the Top of the Page-->
       <nav class="nav-bar-top" role="navigation">
         <div class="nav-div-top">
           <div class="logo-top"><a href="#">www.DEMOLINK.ORG |</a></div>
@@ -20,7 +21,7 @@
           </ul>
         </div>
       </nav>
-
+      <!--Main Nav Bar-->
       <nav class="nav-bar-main" role="navigation">
         <div class="nav-div-main">
           <div class="logo-main">
@@ -39,5 +40,20 @@
         </div>
       </nav>
     </header>
+    <!--Begin Main Page Content-->
+    <main role="main">
+      <!--Main Image-->
+      <img
+        src="./images/Detroix_Main.png"
+        alt="Young Business Man with Glasses, along with Company Slogan"
+        class="main-image"
+      />
+      <!--Three Circles Below Main Image-->
+      <div class="circle-container">
+        <div class="circle"></div>
+        <div class="circle"></div>
+        <div class="circle"></div>
+      </div>
+    </main>
   </body>
 </html>
