Add three cards
Began adding SMART, STRONG, and STABLE cards

--- a/index.html
+++ b/index.html
@@ -54,6 +54,26 @@
         <div class="circle"></div>
         <div class="circle"></div>
       </div>
+
+      <!--Three Cards-->
+      <div class="cards">
+        <div class="smart">
+          <h1>SMART</h1>
+          <img src="./images/SMART.png" alt="Puzzle Pieces" class="img-smart" />
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
+            possimus sit cumque laudantium quo ut voluptatibus quae quis,
+            quisquam fuga? Natus harum cum porro earum, deleniti officiis libero
+            sed possimus.
+          </p>
+        </div>
+        <div class="strong">
+          <h1>STRONG</h1>
+        </div>
+        <div class="stable">
+          <h1>STABLE</h1>
+        </div>
+      </div>
     </main>
   </body>
 </html>
