Add content and style to Cards
Added image, paragraph, and button to cards

--- a/index.html
+++ b/index.html
@@ -55,23 +55,47 @@
         <div class="circle"></div>
       </div>
 
-      <!--Three Cards-->
+      <!--Card Container-->
       <div class="cards">
+        <!--SMART Card-->
         <div class="smart">
           <h1>SMART</h1>
           <img src="./images/SMART.png" alt="Puzzle Pieces" class="img-smart" />
           <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod
-            possimus sit cumque laudantium quo ut voluptatibus quae quis,
-            quisquam fuga? Natus harum cum porro earum, deleniti officiis libero
-            sed possimus.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima ut
+            quia minus natus maiores asperiores temporibus.
           </p>
+          <button type="button">MORE</button>
         </div>
+
+        <!--STRONG Card-->
         <div class="strong">
           <h1>STRONG</h1>
+          <img
+            src="./images/STRONG.png"
+            alt="Hand Holding a Plant"
+            class="img-strong"
+          />
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
+            blanditiis, ipsa hic exercitationem quibusdam qui atque.
+          </p>
+          <button type="button">MORE</button>
         </div>
+
+        <!--STABLE Card-->
         <div class="stable">
           <h1>STABLE</h1>
+          <img
+            src="./images/STABLE.png"
+            alt="Square Spiral Wall"
+            class="img-stable"
+          />
+          <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum amet
+            accusamus officia, distinctio similique libero magni.
+          </p>
+          <button type="button">MORE</button>
         </div>
       </div>
     </main>
