Styled 3 card buttons
Added styling attributes to the 3 card buttons

--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
           <h1>SMART</h1>
           <img src="./images/SMART.png" alt="Puzzle Pieces" class="img-smart" />
           <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minima ut
-            quia minus natus maiores asperiores temporibus.
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Deserunt
+            consequatur rerum incidunt autem ea suscipit beatae eligendi
+            reiciendis.
           </p>
           <button type="button">MORE</button>
         </div>
@@ -77,8 +78,8 @@
             class="img-strong"
           />
           <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam
-            blanditiis, ipsa hic exercitationem quibusdam qui atque.
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
+            illo totam ipsa, quis velit beatae neque magnam et dignissimos nisi.
           </p>
           <button type="button">MORE</button>
         </div>
@@ -92,8 +93,8 @@
             class="img-stable"
           />
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum amet
-            accusamus officia, distinctio similique libero magni.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
+            corporis harum optio repellat repellendus eaque ipsam corrupti.
           </p>
           <button type="button">MORE</button>
         </div>
