Made clickable links
Made clickable links in main navbar and 3 card buttons

--- a/index.html
+++ b/index.html
@@ -31,11 +31,31 @@
           </div>
 
           <ul>
-            <li><button type="button">HOME</button></li>
-            <li><button type="button">ABOUT</button></li>
-            <li><button type="button">SERVICES</button></li>
-            <li><button type="button">FAQS</button></li>
-            <li><button type="button">CONTACTS</button></li>
+            <li>
+              <button type="button">
+                <a href="#" target="_blank">HOME</a>
+              </button>
+            </li>
+            <li>
+              <button type="button">
+                <a href="#" target="_blank">ABOUT</a>
+              </button>
+            </li>
+            <li>
+              <button type="button">
+                <a href="#" target="_blank">SERVICES</a>
+              </button>
+            </li>
+            <li>
+              <button type="button">
+                <a href="#" target="_blank">FAQS</a>
+              </button>
+            </li>
+            <li>
+              <button type="button">
+                <a href="#" target="_blank">CONTACTS</a>
+              </button>
+            </li>
           </ul>
         </div>
       </nav>
@@ -66,7 +86,7 @@
             consequatur rerum incidunt autem ea suscipit beatae eligendi
             reiciendis.
           </p>
-          <button type="button">MORE</button>
+          <button type="button"><a href="#" target="_blank">MORE</a></button>
         </div>
 
         <!--STRONG Card-->
@@ -81,7 +101,7 @@
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Debitis
             illo totam ipsa, quis velit beatae neque magnam et dignissimos nisi.
           </p>
-          <button type="button">MORE</button>
+          <button type="button"><a href="#" target="_blank">MORE</a></button>
         </div>
 
         <!--STABLE Card-->
@@ -96,7 +116,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati,
             corporis harum optio repellat repellendus eaque ipsam corrupti.
           </p>
-          <button type="button">MORE</button>
+          <button type="button"><a href="#" target="_blank">MORE</a></button>
         </div>
       </div>
     </main>
