Created Services Info Card
Created and styled Services Info Card

--- a/index.html
+++ b/index.html
@@ -119,6 +119,25 @@
           <button type="button"><a href="#" target="_blank">MORE</a></button>
         </div>
       </div>
+
+      <!--Info Card Container-->
+      <div class="info-cards">
+        <!--Services Info Card-->
+        <div class="services">
+          <h1>SERVICES</h1>
+          <ul>
+            <li>⚙️ Lorem ipsum dolor sit amet.</li>
+            <li>⚙️ Lorem ipsum dolor sit amet consectetur.</li>
+            <li>⚙️ Lorem ipsum dolor sit amet.</li>
+            <li>⚙️ Lorem ipsum dolor sit amet consectetur.</li>
+            <li>⚙️ Lorem, ipsum dolor sit amet consectetur adipisicing.</li>
+            <li>⚙️ Lorem ipsum dolor sit amet consectetur.</li>
+            <li>⚙️ Lorem ipsum dolor sit amet.</li>
+            <li>⚙️ Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
+          </ul>
+          <button type="button"><a href="#">MORE</a></button>
+        </div>
+      </div>
     </main>
   </body>
 </html>
