Created OPPORTUNITIES  info card
Created and styled OPPORTUNITIES info card

--- a/index.html
+++ b/index.html
@@ -122,9 +122,9 @@
 
       <!--Info Card Container-->
       <div class="info-cards">
-        <!--Services Info Card-->
+        <!--SERVICES Info Card-->
         <div class="services">
-          <h1>SERVICES</h1>
+          <h2>SERVICES</h2>
           <ul>
             <li>⚙️ Lorem ipsum dolor sit amet.</li>
             <li>⚙️ Lorem ipsum dolor sit amet consectetur.</li>
@@ -136,6 +136,29 @@
             <li>⚙️ Lorem ipsum dolor sit, amet consectetur adipisicing.</li>
           </ul>
           <button type="button"><a href="#">MORE</a></button>
+        </div>
+        <!--OPPORTUNITIES Info Card-->
+        <div class="opportunities">
+          <h2>OPPORTUNITIES</h2>
+          <h3>💬 Lorem ipsum dolor sit.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae in
+            dicta odio enim aspernatur expedita tenetur aperiam excepturi sequi
+            quis.
+          </p>
+          <br />
+
+          <h3>💬 Lorem ipsum dolor sit.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum,
+            neque a. Vero odio nemo tempore perferendis maxime qui eligendi eos.
+          </p>
+          <button type="button"><a href="#">MORE</a></button>
+        </div>
+
+        <!--NEWS Info Card-->
+        <div class="news">
+          <h2>NEWS</h2>
         </div>
       </div>
     </main>
