Created and styled NEWS Section
Created and styled NEWS Section

--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
           </ul>
           <button type="button"><a href="#">MORE</a></button>
         </div>
+
         <!--OPPORTUNITIES Info Card-->
         <div class="opportunities">
           <h2>OPPORTUNITIES</h2>
@@ -159,8 +160,56 @@
         <!--NEWS Info Card-->
         <div class="news">
           <h2>NEWS</h2>
+
+          <!--Nov 21 Section-->
+          <div class="nov-21">
+            <div class="nov-21-img">
+              <img src="./images/Nov21.png" alt="Nov 21" />
+            </div>
+            <div class="nov-21-text">
+              <h5>Lorem ipsum dolor sit.</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia.
+              </p>
+            </div>
+          </div>
+
+          <!--Nov 09 Section-->
+          <div class="nov-09">
+            <div class="nov-09-img">
+              <img src="./images/Nov09.png" alt="Nov 21" />
+            </div>
+            <div class="nov-09-text">
+              <h5>Lorem ipsum dolor sit.</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque
+                quod sit voluptatum?
+              </p>
+            </div>
+          </div>
+
+          <!--Nov 17 Section-->
+          <div class="nov-17">
+            <div class="nov-17-img">
+              <img src="./images/Nov17.png" alt="Nov 21" />
+            </div>
+            <div class="nov-17-text">
+              <h5>Lorem ipsum dolor sit.</h5>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
+                laudantium quo porro.
+              </p>
+            </div>
+          </div>
+
+          <button type="button"><a href="#">MORE</a></button>
         </div>
       </div>
     </main>
+
+    <!--Footer>-->
+    <footer role="doc-footnote">
+      <p>DETROIX © 2012 * PRIVACY POLICY</p>
+    </footer>
   </body>
 </html>
