--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               <img src="./images/Nov17.png" alt="Nov 21" />
             </div>
             <div class="nov-17-text">
-              <h5>Lorem ipsum dolor sit.</h5>
+              <h5>Lorem ipsum dolor sit amet consectetur.</h5>
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum
                 laudantium quo porro.
